// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <ContactsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "contactPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="contactPanel"
      title="Contact"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Relationship
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Relationship Type
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Contact Information
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Next of Kin
                  </label>
                  <div
                    className="form-control-static"
                  >
                    No
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Note
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    03-Oct-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ContactsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "contactPanel": true,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="contactPanel"
      title="Edit Contact"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "contactInformation": "test",
            "dateCreated": 1512579806000,
            "name": "123458",
            "nextOfKin": "Yes",
            "notes": "test",
            "relationship": "Sister",
            "relationshipCode": "at0036",
            "relationshipTerminology": "local",
            "relationshipType": "Informal carer",
            "source": "ethercis",
            "sourceId": "9e06d22b-3f60-4bc6-bb6e-1b42bff75ed2",
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ContactsDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "contactPanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="contactPanel"
      title="Contact"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    123458
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Relationship
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Sister
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Relationship Type
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Informal carer
                  </div>
                </div>
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Contact Information
                  </label>
                  <div
                    className="form-control-static"
                  >
                    test
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Next of Kin
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Yes
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Note
                  </label>
                  <div
                    className="form-control-static"
                  >
                    test
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    bob.smith@gmail.com
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    06-Dec-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    ethercis
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
